--- a/mcp-client/pom.xml
+++ b/mcp-client/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>commonmark</artifactId>
             <version>0.21.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark-ext-gfm-tables</artifactId>
+            <version>0.21.0</version>
+        </dependency>
 
     </dependencies>
 
