优化 call-mcp 模块的交互页面

--- a/call-mcp/src/main/resources/application.properties
+++ b/call-mcp/src/main/resources/application.properties
@@ -1,18 +1,17 @@
+spring.profiles.active=${ENVIRONMENT:dev}
+
 server.port=8083
 
+project.base-url=http://localhost:8083
+
 spring.ai.openai.api-key=xxxxx
-spring.ai.openai.base-url=https://ark.cn-beijing.volces.com/api
-spring.ai.openai.chat.completions-path=/v3/chat/completions
-spring.ai.openai.chat.options.model=deepseek-r1-250120
+spring.ai.openai.base-url=https://api.deepseek.com
+spring.ai.openai.chat.options.model=deepseek-chat
 
 
 spring.ai.mcp.client.enabled=true
-spring.ai.mcp.client.request-timeout=30s
+spring.ai.mcp.client.request-timeout=60s
 
-spring.ai.mcp.client.sse.connections.server1.url=http://localhost:8085
 
-#spring.ai.mcp.client.toolcallback.enabled=true
-spring.ai.mcp.client.stdio.servers-configuration=classpath:mcp-servers-config.json
+#spring.jackson.deserialization.fail-on-unknown-properties=false
 
-logging.level.io.modelcontextprotocol.client=DEBUG
-logging.level.io.modelcontextprotocol.spec=DEBUG
