--- a/call-mcp/pom.xml
+++ b/call-mcp/pom.xml
@@ -45,7 +45,24 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-mcp-client-spring-boot-starter</artifactId>
             <version>${spring.ai.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.modelcontextprotocol.sdk</groupId>
+                    <artifactId>mcp</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <dependency>
+            <groupId>io.modelcontextprotocol.sdk</groupId>
+            <artifactId>mcp</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.ai</groupId>-->
+<!--            <artifactId>spring-ai-mcp-client-webflux-spring-boot-starter</artifactId>-->
+<!--            <version>${spring.ai.version}</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.commonmark</groupId>
