--- a/call-mcp/src/main/resources/application-dev.properties
+++ b/call-mcp/src/main/resources/application-dev.properties
@@ -6,3 +6,4 @@ spring.ai.mcp.client.stdio.servers-configuration=classpath:dev-mcp-servers-confi
 
 logging.level.io.modelcontextprotocol.client=DEBUG
 logging.level.io.modelcontextprotocol.spec=DEBUG
+logging.level.org.springframework.ai.model.tool=DEBUG
