--- a/mcp-client/src/main/resources/application.properties
+++ b/mcp-client/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.ai.openai.chat.options.model=deepseek-chat
 
 
 spring.ai.mcp.client.sse.connections.server1.url=http://localhost:8085
+
+spring.ai.mcp.client.toolcallback.enabled=true
+spring.ai.mcp.client.stdio.servers-configuration=classpath:mcp-servers-config.json
